--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "vercel": "^34.2.0"
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
