--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "functions" : {
         "api/*js": {
-            "includeFiles" : "node_modules/puppeteer/.local-chromeium/**"
+            "includeFiles" : "chrome"
         }
     }
 }
